# If you want to build these components, please cd to their respective
# directories and type `make'.
AUTOMAKE_OPTIONS = foreign

subdirs = src include

SUBDIRS = $(subdirs) 

DIST_SUBDIRS = $(subdirs)

DEPDIR = ${subdirs}/.deps

CLEANFILES = *~ core* 

EXTRA_DIST = configure CREDITS VERSION extace.spec AUTHORS TODO
