
headers = \
	2d_eq.h \
	audio_processing.h \
	buttons.h \
	color_win.h \
	configfile.h \
	convolve.h \
	datawindow.h \
	defaults.h \
	defines.h \
	dir.h \
	draw.h \
	enums.h \
	events.h \
	gc_maker.h \
	globals.h \
	horiz_specgram.h \
	init.h \
	land_3d.h \
	markers.h \
	options.h \
	reducer.h \
	scope.h \
	sound.h \
	spike_3d.h \
	stars.h \
	template.h \
	vert_specgram.h


EXTRA_DIST=$(headers)

