
headers = \
	2d_eq.h \
	buttons.h \
	color_win.h \
	comedi_input.h \
	configfile.h \
	convolve.h \
	datawindow.h \
	defaults.h \
	defines.h \
	dir.h \
	draw.h \
	enums.h \
	events.h \
	gc_maker.h \
	globals.h \
	horiz_specgram.h \
	init.h \
	input.h \
	input_processing.h \
	land_3d.h \
	markers.h \
	options.h \
	reducer.h \
	scope.h \
	spike_3d.h \
	stars.h \
	template.h \
	vert_specgram.h


EXTRA_DIST=$(headers)

